--- a/LuminWarrior.csproj
+++ b/LuminWarrior.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>player.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -72,6 +73,7 @@
     <Content Include="assets\sounds\victorysound.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="player.ico" />
   </ItemGroup>
 
 </Project>
